--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
         "url": "https://github.com/krazygfx/darksynth.git",
         "type": "git"
     },
-    "publisher": "codigo-tecsup"
+    "publisher": "KrazyGFX"
 }
